@@ -23,6 +23,9 @@ Contents:
 Migrating from 1.5.1 to 1.6.0
 =============================
 
+Database back end specified in config.ini
+--------------------
+
 The ``db/backend_name`` file is no longer used to configure the database
 backend being used for a tracker. The backend is now configured in the
 ``config.ini`` file using the ``backend`` option located in the ``[rdbms]``
@@ -43,6 +46,18 @@ you can safely delete the ``db/backend_name`` file.
 Note: the ``backend_name`` file may be located in a directory other than
 ``db/`` if you have configured the ``database`` option in the ``[main]``
 section of the ``config.ini`` file to be something other than ``db``.
+
+html/_generic.404.html in trackers use page template
+--------------------
+
+The original generic 404 error pages for many trackers did not use the
+standard page layout. This change replaces the html/_generic.404.html
+page with one that uses the page template.
+
+If your deployed tracker is based on: classic, minimal, responsive or
+devel templates and has not changed the html/_generic.404.html file,
+you can copy in the new file to get this additional functionality.
+
 
 Migrating from 1.5.0 to 1.5.1
 =============================
